--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Dharshan. All rights reserved.</p>
+        <p>&copy; 2025 Aditya. All rights reserved.</p>
     </footer>
 </body>
 </html>
